Work around problem that blocked Chef from installing update-notifier-common

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -34,10 +34,12 @@ suites:
         autoreboot:
           enable: true
     run_list:
+      - recipe[apt]
       - recipe[cron]
       - recipe[autoupdates]
       - recipe[autoupdates::autoreboot]
   - name: disable
     run_list:
+      - recipe[apt]
       - recipe[cron]
       - recipe[autoupdates_test::disable]
